Introduces NPM and Webpack for JS builds, and adds a bit of organization.
This feature isn't done. Right now I have things set up to commit the compiled
JS bundles. I'm still figuring out how I want to organize this project, so I'll
come back to it.

--- a/jekyll-site-src/_layouts/default.html
+++ b/jekyll-site-src/_layouts/default.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
-
   {% include head.html %}
-
   <body>
-
     {% include header.html %}
     {% include sidebar.html %}
 
@@ -13,7 +10,7 @@
     </section>
 
     {% include footer.html %}
-
     {% include frontend_templates.html %}
+    {% include scripts.html %}
   </body>
 </html>
