--- a/jekyll-site-src/_css_src/app.scss
+++ b/jekyll-site-src/_css_src/app.scss
@@ -1,1 +1,19 @@
-@charset "utf-8";
+@import 'mixins';
+@import 'constants'; // Includes mdc-web overrides
+
+@import 'reset-css/_reset';
+@import "@material/theme/mdc-theme";
+@import '@material/typography/mdc-typography';
+@import '@material/drawer/mdc-drawer';
+@import '@material/list/mdc-list';
+@import '@material/toolbar/mdc-toolbar';
+
+// Site
+@import 'base';
+@import 'article';
+@import 'code';
+@import 'drawer';
+@import 'footer';
+@import 'icon-list';
+@import 'layout';
+@import 'toolbar';
