--- a/jekyll-site-src/_includes/footer.html
+++ b/jekyll-site-src/_includes/footer.html
@@ -1,26 +1,16 @@
+<footer class="footer">
+  <div class="footer__content">
+    <a class="footer__logo" href="https://www.google.com" target="_blank"></a>
 
-    <footer>
-      <div class="social">
-        <div class="icon-wrapper">
-          <a title="Google Plus" class="icon-anchor" href="https://plus.google.com/+googledesign" target="_blank" aria-label="Google Plus">
-            <div class="icon googleplus"></div>
-          </a>
-          <a title="YouTube" class="icon-anchor" href="https://www.youtube.com/googledesign" target="_blank" aria-label="YouTube">
-            <div class="icon youtube"></div>
-          </a>
-          <a title="Twitter" class="icon-anchor" href="https://twitter.com/googledesign" target="_blank" aria-label="Twitter">
-            <div class="icon twitter"></div>
-          </a>
-        </div>
-      </div>
-      <div class="footer-bottom">
-        <a class="google-logo" href="https://www.google.com" target="_blank">
-          <div class="google-logo-svg"></div>
-        </a>
-        <div class="legal" role="navigation" aria-label="Supporting information about this site">
-          <a href="http://www.google.com/intl/en/about/" target="_blank">About Google</a>
-          <span class="dot" aria-hidden="true"></span>
-          <a href="https://www.google.com/intl/en/policies/terms/" target="_blank">Privacy &amp; Terms</a>
-        </div>
-      </div>
-    </footer>
+    <nav>
+      <ul class="footer__links">
+        <li>
+          <a class="footer__link" href="http://www.google.com/intl/en/about/" target="_blank">About Google</a>
+        </li>
+        <li>
+          <a class="footer__link" href="https://www.google.com/intl/en/policies/terms/" target="_blank">Privacy &amp; Terms</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</footer>
