--- a/jekyll-site-src/_layouts/landing.html
+++ b/jekyll-site-src/_layouts/landing.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html class="mdc-typography">
   {% include head.html %}
-  <body class="{{ page.layout }} {{ page.section }}">
-    {% include header.html %}
-    {% include sidebar.html %}
+  <body class="{{ page.layout }} {{ page.section }} mdc-typography">
+    {% include toolbar.html %}
 
-    <div id="main_content">
-      <section>
+    <div class="page-content">
+      {% include drawer.html %}
+      <article class="article">
         {{ content }}
-      </section>
+      </article>
     </div>
 
     {% include footer.html %}
