--- a/jekyll-site-src/_sass/_globals.scss
+++ b/jekyll-site-src/_sass/_globals.scss
@@ -1,21 +1,24 @@
 //
 // Define all color constants here
 //
-$white: #fff;
+$black-20: rgba(0, 0, 0, 0.20);
+$black-54: rgba(0, 0, 0, 0.54);
+$black-87: rgba(0, 0, 0, 0.87);
 $black: #000;
-$grey-50: #fafafa;
+$brown-200: #bcaaa4;
+$brown-400: #8d6e63;
+$green-a700: #00c853;
 $grey-100: #f5f5f5;
 $grey-300: #e0e0e0;
 $grey-400: #bdbdbd;
+$grey-50: #fafafa;
 $grey-600: #757575;
 $grey-800: #424242;
-$black-54: rgba(0, 0, 0, 0.54);
-$black-20: rgba(0, 0, 0, 0.20);
-$black-87: rgba(0, 0, 0, 0.87);
-$light-blue-500: #03A9F4;
-$teal-400: #26A69A;
-$green-a700: #00C853;
-$indigo-500: #3F51B5;
+$indigo-500: #3f51b5;
+$light-blue-500: #03a9f4;
+$pink-900: #880e4f;
+$teal-400: #26a69a;
+$white: #fff;
 
 //
 // Globals
