--- a/jekyll-site-src/_includes/toolbar.html
+++ b/jekyll-site-src/_includes/toolbar.html
@@ -4,4 +4,7 @@
       Material Components for <span style="color:magenta">Platform</span>
     </h1>
   </section>
+  <section class="mdc-toolbar__section mdc-toolbar__section--align-end">
+    {% include toolbar-nav.html %}
+  </section>
 </header>
