--- a/jekyll-site-src/_css_src/_toolbar.scss
+++ b/jekyll-site-src/_css_src/_toolbar.scss
@@ -1,18 +1,61 @@
+$toolbar-height: 72px;
+
 .mdc-toolbar {
   @include pad-to-page-width;
 
   display: flex;
   justify-content: center;
 
-  height: 72px;
+  height: $toolbar-height;
   color: #fff;
   background: $grey-900;
 
   // TODO(shyndman): This increase in specificity is temporary. Remove when the
   // latest MDC is released.
   & &__title {
-    font-family: $ui-font-family;
     background: no-repeat left/45px url('/images/mdc-logo.svg');
+    font-family: $ui-font-family;
     padding: 2px 0 4px 64px;
+    text-transform: uppercase;
+  }
+}
+
+.toolbar-nav {
+  height: $toolbar-height;
+
+  &__links {
+    display: flex;
+    height: 100%;
+  }
+
+}
+
+.toolbar-nav-link {
+  @include link-styles {
+    color: $white;
+  }
+
+  display: inline-flex;
+  align-items: center;
+
+  height: 100%;
+  padding: 0 14px;
+
+  border-bottom: 2px solid transparent;
+  cursor: pointer;
+  text-decoration: none;
+  text-transform: uppercase;
+
+  &__text {
+    position: relative;
+    top: 2px;
+  }
+
+  &--active {
+    @include link-styles {
+      color: $accent-color;
+    }
+
+    border-bottom: 2px solid $accent-color;
   }
 }
