Adds a mixin for applying all link styles.

--- a/jekyll-site-src/_css_src/_base.scss
+++ b/jekyll-site-src/_css_src/_base.scss
@@ -14,11 +14,7 @@ strong {
 }
 
 a {
-  &,
-  &:link,
-  &:visited,
-  &:hover,
-  &:active {
+  @include link-styles {
     @include mdc-typography(body1);
     color: $black-87;
     font-family: $ui-font-family;
