--- a/jekyll-site-src/_css_src/_mixins.scss
+++ b/jekyll-site-src/_css_src/_mixins.scss
@@ -1,3 +1,13 @@
 @mixin pad-to-page-width {
   padding: 0 calc((100% - #{$content-width}) / 2);
 }
+
+@mixin link-styles {
+  &,
+  &:link,
+  &:visited,
+  &:hover,
+  &:active {
+    @content;
+  }
+}
