--- a/jekyll-site-src/_layouts/landing-no-drawer.html
+++ b/jekyll-site-src/_layouts/landing-no-drawer.html
@@ -11,7 +11,7 @@
     </div>
 
     {% include footer.html %}
-    {% include frontend_templates.html %}
+    {% include frontend-templates.html %}
     {% include scripts.html %}
   </body>
 </html>
