Adds a style for inline code.

--- a/jekyll-site-src/_css_src/_base.scss
+++ b/jekyll-site-src/_css_src/_base.scss
@@ -13,6 +13,10 @@ strong {
   font-weight: 500;
 }
 
+code {
+  font-family: $ui-font-family;
+}
+
 a {
   @include link-styles {
     @include mdc-typography(body1);
