--- a/jekyll-site-src/_includes/head.html
+++ b/jekyll-site-src/_includes/head.html
@@ -13,7 +13,7 @@
   <meta property="og:site_name" content="{{ site.title | escape }}" />
   <meta property="article:section" content="{% if page.title %}{{ page.title | escape }}{% endif %}" />
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500|Roboto+Mono" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500|Roboto+Mono" rel="stylesheet" type="text/css">
   <!-- TODO(shyndman): Merge these stylesheets together -->
   <link rel="stylesheet" href="{{ site.url }}{{ site.folder }}/css/codemirror.css">
   <link rel="stylesheet" href="{{ site.url }}{{ site.folder }}/css/app.css">
