Improves styling for inline code.

--- a/jekyll-site-src/_css_src/_base.scss
+++ b/jekyll-site-src/_css_src/_base.scss
@@ -14,7 +14,13 @@ strong {
 }
 
 code {
+  &::before,
+  &::after {
+    content: '\00a0';
+    letter-spacing: -0.4em;
+  }
   font-family: $ui-font-family;
+  background: $black-05;
 }
 
 ol {
