Adds a basic crappy welcome header.

--- a/jekyll-site-src/_css_src/_constants.scss
+++ b/jekyll-site-src/_css_src/_constants.scss
@@ -22,9 +22,11 @@ $teal-400: #26A69A;
 $white: #fff;
 
 $accent-color: #00e871;
+$header-background: $grey-900;
+$header-text-color: $white;
 
 $content-width: 1280px;
-
+$toolbar-height: 72px;
 $ui-font-family: 'Roboto Mono';
 
 // MDC overrides
