--- a/jekyll-site-src/_css_src/_toolbar.scss
+++ b/jekyll-site-src/_css_src/_toolbar.scss
@@ -1,5 +1,3 @@
-$toolbar-height: 72px;
-
 .mdc-toolbar {
   @include pad-to-page-width;
 
@@ -7,8 +5,8 @@ $toolbar-height: 72px;
   justify-content: center;
 
   height: $toolbar-height;
-  color: #fff;
-  background: $grey-900;
+  background: $header-background;
+  color: $header-text-color;
 
   // TODO(shyndman): This increase in specificity is temporary. Remove when the
   // latest MDC is released.
