--- a/jekyll-site-src/_layouts/homepage.html
+++ b/jekyll-site-src/_layouts/homepage.html
@@ -3,6 +3,7 @@
   {% include head.html %}
   <body id="homepage" class="mdc-typography">
     {% include toolbar.html %}
+    {% include welcome.html %}
 
     <div class="page-content">
       <article class="article">
