--- a/jekyll-site-src/_css_src/_toolbar.scss
+++ b/jekyll-site-src/_css_src/_toolbar.scss
@@ -7,6 +7,7 @@
   height: $toolbar-height;
   background: $header-background;
   color: $header-text-color;
+  // margin-bottom: 78px;
 
   // TODO(shyndman): This increase in specificity is temporary. Remove when the
   // latest MDC is released.
