--- a/jekyll-site-src/_css_src/app.scss
+++ b/jekyll-site-src/_css_src/app.scss
@@ -12,6 +12,7 @@
 @import 'base';
 @import 'article';
 @import 'code';
+@import 'component-icons';
 @import 'drawer';
 @import 'footer';
 @import 'icon-list';
