--- a/jekyll-site-src/_includes/toolbar.html
+++ b/jekyll-site-src/_includes/toolbar.html
@@ -1,7 +1,7 @@
 <header class="mdc-toolbar">
   <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
     <h1 class="mdc-toolbar__title">
-      {{ site.title }}
+      {{ include.title }}
     </h1>
   </section>
   <section class="mdc-toolbar__section mdc-toolbar__section--align-end">
