--- a/jekyll-site-src/_layouts/homepage.html
+++ b/jekyll-site-src/_layouts/homepage.html
@@ -2,7 +2,7 @@
 <html class="mdc-typography">
   {% include head.html %}
   <body id="homepage" class="mdc-typography">
-    {% include toolbar.html %}
+    {% include toolbar.html title="Material Components" %}
     {% include welcome.html %}
 
     <div class="page-content">
