Code snippets now use mdc-radios.
I took the opportunity to do a tiny bit of cleanup in mdc-code-render. More to
come.

--- a/jekyll-site-src/_css_src/_constants.scss
+++ b/jekyll-site-src/_css_src/_constants.scss
@@ -30,5 +30,6 @@ $toolbar-height: 72px;
 $ui-font-family: 'Roboto Mono';
 
 // MDC overrides
+$mdc-theme-primary: $accent-color;
 $mdc-theme-accent: $accent-color;
 $mdc-theme-background: $white;
