--- a/jekyll-site-src/_css_src/app.scss
+++ b/jekyll-site-src/_css_src/app.scss
@@ -6,7 +6,9 @@
 @import '@material/typography/mdc-typography';
 @import '@material/drawer/mdc-drawer';
 @import '@material/list/mdc-list';
+@import '@material/radio/mdc-radio';
 @import '@material/toolbar/mdc-toolbar';
+@import '@material/form-field/mdc-form-field';
 
 // Site
 @import 'base';
