--- a/jekyll-site-src/_css_src/_welcome.scss
+++ b/jekyll-site-src/_css_src/_welcome.scss
@@ -6,7 +6,7 @@
 
   &__content {
     height: 640px - $toolbar-height;
-    background: right center / 800px url('/images/welcome.svg') no-repeat;
+    background: right -80px/800px url("/images/welcome.svg") no-repeat;
   }
 
   &__title {
@@ -14,6 +14,6 @@
     font-size: 56px;
     line-height: 72px;
     max-width: 412px;
-    padding-top: 180px - $toolbar-height;
+    padding-top: 160px;
   }
 }
