--- a/jekyll-site-src/_includes/toolbar.html
+++ b/jekyll-site-src/_includes/toolbar.html
@@ -1,10 +1,14 @@
-<header class="mdc-toolbar">
-  <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
-    <h1 class="mdc-toolbar__title">
-      {{ include.title }}
-    </h1>
-  </section>
-  <section class="mdc-toolbar__section mdc-toolbar__section--align-end">
-    {% include toolbar-nav.html %}
-  </section>
+<header class="mdc-toolbar mdc-toolbar--fixed {% if include.no_shadow %}mdc-toolbar--no-shadow{% endif %}">
+  <div class="mdc-toolbar__row">
+    <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
+      <a class="mdc-toolbar__title-link" href="{{ include.title_href | default: '../' }}">
+        <h1 class="mdc-toolbar__title">
+          {{ include.title }}
+        </h1>
+      </a>
+    </section>
+    <section class="mdc-toolbar__section mdc-toolbar__section--align-end">
+      {% include toolbar-nav.html %}
+    </section>
+  </div>
 </header>
