--- a/jekyll-site-src/_layouts/landing.html
+++ b/jekyll-site-src/_layouts/landing.html
@@ -2,7 +2,7 @@
 <html class="mdc-typography">
   {% include head.html %}
   <body class="{{ page.layout }} {{ page.section }} mdc-typography">
-    {% include toolbar.html title=site.title %}
+    {% include toolbar.html title=site.title no_shadow=true %}
 
     <div class="page-content">
       {% include drawer.html %}
