Adds hidden marks to headlines and titles.

--- a/jekyll-site-src/_css_src/_constants.scss
+++ b/jekyll-site-src/_css_src/_constants.scss
@@ -19,6 +19,7 @@ $indigo-500: #3F51B5;
 $light-blue-500: #03A9F4;
 $pink-900: #880E4F;
 $teal-400: #26A69A;
+$white-50: rgba(255, 255, 255, .5);
 $white: #fff;
 
 $accent-color: #00e871;
