--- a/jekyll-site-src/_css_src/_welcome.scss
+++ b/jekyll-site-src/_css_src/_welcome.scss
@@ -15,5 +15,9 @@
     line-height: 72px;
     max-width: 412px;
     padding-top: 160px;
+
+    .hidden-mark {
+      color: $white-50;
+    }
   }
 }
