--- a/jekyll-site-src/_css_src/app.scss
+++ b/jekyll-site-src/_css_src/app.scss
@@ -17,6 +17,7 @@
 @import 'component-icons';
 @import 'drawer';
 @import 'footer';
+@import 'hidden-mark';
 @import 'icon-list';
 @import 'layout';
 @import 'toolbar';
