Moves component styling into its own directory.

--- a/jekyll-site-src/_css_src/app.scss
+++ b/jekyll-site-src/_css_src/app.scss
@@ -12,13 +12,13 @@
 
 // Site
 @import 'base';
-@import 'article';
-@import 'code';
-@import 'component-icons';
-@import 'drawer';
-@import 'footer';
-@import 'hidden-mark';
-@import 'icon-list';
-@import 'layout';
-@import 'toolbar';
-@import 'welcome';
+@import 'components/article';
+@import 'components/code';
+@import 'components/component-icons';
+@import 'components/drawer';
+@import 'components/footer';
+@import 'components/hidden-mark';
+@import 'components/icon-list';
+@import 'components/layout';
+@import 'components/toolbar';
+@import 'components/welcome';
