Adds two new component icons.
* Radio
* Theme

--- a/jekyll-site-src/_css_src/components/_component-icons.scss
+++ b/jekyll-site-src/_css_src/components/_component-icons.scss
@@ -14,6 +14,7 @@ $icon-ids:
   'list',
   'menu',
   'progress_activity',
+  'radio_button',
   'responsive_layout',
   'ripple',
   'slider',
@@ -22,6 +23,7 @@ $icon-ids:
   'switch',
   'tabs',
   'text_field',
+  'theme',
   'toast',
   'toolbar',
   'tooltip',
