Changes link-lists CSS to use BEM notation.

--- a/jekyll-site-src/_css_src/components/_icon-list.scss
+++ b/jekyll-site-src/_css_src/components/_icon-list.scss
@@ -3,32 +3,29 @@
   @extend .mdc-list--dense;
 
   padding: 0;
-
-  > li {
-    @extend .mdc-list-item;
-    padding-bottom: 0;
-    text-transform: uppercase;
-  }
 }
 
-.icon-link,
-.icon-spec {
-  &::before {
-    content: '';
-    display: inline-block;
+.icon-list-item {
+  @extend .mdc-list-item;
 
+  padding-bottom: 0;
+  text-transform: uppercase;
+
+  &::before {
+    display: inline-block;
+    content: '';
 
     background-size: 22px;
     width: 22px;
     height: 22px;
     margin-right: 20px;
   }
-}
 
-.icon-spec::before {
-  background-image: url('/images/icons/ic_material_design_black_24px.svg');
-}
+  &--spec::before {
+    background-image: url('/images/icons/ic_material_design_black_24px.svg');
+  }
 
-.icon-link::before {
-  background-image: url('/images/icons/ic_open_in_new_black_24px.svg');
+  &--link::before {
+    background-image: url('/images/icons/ic_open_in_new_black_24px.svg');
+  }
 }
