Adds two missing icons to the component icon list.

--- a/jekyll-site-src/_css_src/components/_component-icons.scss
+++ b/jekyll-site-src/_css_src/components/_component-icons.scss
@@ -17,6 +17,8 @@ $icon-ids:
   'radio_button',
   'responsive_layout',
   'ripple',
+  'selection_control',
+  'side_navigation',
   'slider',
   'stepper',
   'subheader',
