Removes site.url and site.folder from asset URLs.

--- a/jekyll-site-src/_includes/head.html
+++ b/jekyll-site-src/_includes/head.html
@@ -26,9 +26,8 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500|Roboto+Mono" rel="stylesheet" type="text/css">
   <!-- TODO(shyndman): Merge these stylesheets together -->
-  <link rel="stylesheet" href="{{ site.url }}{{ site.folder }}/css/codemirror.css">
-  <link rel="stylesheet" href="{{ site.url }}{{ site.folder }}/css/app.css">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.folder | prepend: site.url }}">
+  <link rel="stylesheet" href="/css/codemirror.css">
+  <link rel="stylesheet" href="/css/app.css">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
