--- a/jekyll-site-src/_includes/toolbar-nav.html
+++ b/jekyll-site-src/_includes/toolbar-nav.html
@@ -5,17 +5,17 @@ TODO(shyndman): This should be data driven.
 <nav class="toolbar-nav">
   <ul class="toolbar-nav__links">
     <li>
-      <a class="toolbar-nav-link" href="/howto/">
+      <a class="toolbar-nav-link" href="{{ page.basepath }}/howto/">
         <span class="toolbar-nav-link__text">How To</span>
       </a>
     </li>
     <li>
-      <a class="toolbar-nav-link" href="/components/">
+      <a class="toolbar-nav-link" href="{{ page.basepath }}/components/">
         <span class="toolbar-nav-link__text">Components</span>
       </a>
     </li>
     <li>
-      <a class="toolbar-nav-link" href="/contributing/">
+      <a class="toolbar-nav-link" href="{{ page.basepath }}/contributing/">
         <span class="toolbar-nav-link__text">Contributing</span>
       </a>
     </li>
