--- a/jekyll-site-src/_layouts/default.html
+++ b/jekyll-site-src/_layouts/default.html
@@ -2,7 +2,7 @@
 <html class="mdc-typography">
   {% include head.html %}
   <body class="mdc-typography">
-    {% include toolbar.html title=site.title %}
+    {% include toolbar.html title=page.site_title %}
 
     <div class="page-content">
       {% include drawer.html %}
