--- a/jekyll-site-src/_layouts/landing-no-drawer.html
+++ b/jekyll-site-src/_layouts/landing-no-drawer.html
@@ -2,7 +2,7 @@
 <html class="mdc-typography">
   {% include head.html %}
   <body class="{{ page.layout }} {{ page.section }} mdc-typography">
-    {% include toolbar.html title=site.title %}
+    {% include toolbar.html title=page.site_title %}
 
     <div class="page-content">
       <article class="article">
