--- a/jekyll-site-src/_includes/welcome.html
+++ b/jekyll-site-src/_includes/welcome.html
@@ -1,7 +1,7 @@
 <section class="welcome">
   <div class="welcome__content">
     <h1 class="welcome__title">
-      {{ site.title }}
+      {{ page.site_title }}
     </h1>
   </div>
 </section>
