--- a/jekyll-site-src/_includes/head.html
+++ b/jekyll-site-src/_includes/head.html
@@ -2,15 +2,15 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" >
-  <title>{% if page.title and page.title != site.title %}{{ page.title | escape }} - {% endif %}{{ page.site_title | escape }}</title>
+  <title>{% if page.title and page.title != page.site_title %}{{ page.title | escape }} - {% endif %}{{ page.site_title | escape }}</title>
 
-  <meta itemprop="name" content="{% if page.title and page.title != site.title %}{{ page.title | escape }} - {% endif %}{{ site.title | escape }}" />
+  <meta itemprop="name" content="{% if page.title and page.title != page.site_title %}{{ page.title | escape }} - {% endif %}{{ page.site_title | escape }}" />
   <meta itemprop="image" content="https://material.io/static/images/simple-lp/components-share.png" />
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
+  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ page.site_description }}{% endif %}" />
 
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="{% if page.title and page.title != site.title %}{{ page.title | escape }} - {% endif %}{{ site.title | escape }}" />
-  <meta property="og:site_name" content="{{ site.title | escape }}" />
+  <meta property="og:title" content="{% if page.title and page.title != page.site_title %}{{ page.title | escape }} - {% endif %}{{ page.site_title | escape }}" />
+  <meta property="og:site_name" content="{{ page.site_title | escape }}" />
   <meta property="og:image" content="https://material.io/static/images/simple-lp/components-share.png">
   <meta property="article:section" content="{% if page.title %}{{ page.title | escape }}{% endif %}" />
 
