Adds a basic component list (included by component indexes).

--- a/jekyll-site-src/_css_src/app.scss
+++ b/jekyll-site-src/_css_src/app.scss
@@ -15,6 +15,7 @@
 @import 'components/article';
 @import 'components/code';
 @import 'components/component-icons';
+@import 'components/component-list';
 @import 'components/drawer';
 @import 'components/footer';
 @import 'components/hidden-mark';
